--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('build'){
             steps{
             sh 'mvn clean package'
-            sh "docker build ."
+            sh "docker build . -t tomcatwebapp:${env.BUILD_ID"}"
             }
         }
    }
