--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
             steps{
             sh 'mvn clean package'
             sh "docker build . -t tomcatwebapp:${env.BUILD_ID}"
+            sh "docker run -d -p 8181:8080 tomcatwebapp:${env.BUILD_ID}  "
             }
         }
    }
