--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('build'){
             steps{
             sh 'mvn clean package'
-            sh "docker stop $( docker ps | grep tomcatwebapp | cut -d ' ' -f1 "
+            sh "docker stop $( docker ps | grep tomcatwebapp | cut -d ' ' -f1 ) "
             sh "docker build . -t tomcatwebapp:${env.BUILD_ID}"
             sh "docker run -d -p 8181:8080 tomcatwebapp:${env.BUILD_ID}  "
             }
